--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ out.*
 *.csv
 *.onnx
 
+# Benchmark info
+/seis_proc_dl/apply_to_continuous/benchmark
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
