--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ readme = "README.md"
 test = [
     "pytest~=8.3.5", 
 ]
+swag = [
+    "gpytorch=1.11",
+    "scikit-learn=1.3.1"
+]
 
 [tool.pytest.ini_options]
 minversion = "8.3.5"
